docker/eureka-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.image-pull-policy: IfNotPresent
    kompose.service.type: ClusterIP
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: eureka-server
  name: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eureka-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.image-pull-policy: IfNotPresent
        kompose.service.type: ClusterIP
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/clinic-net: "true"
        io.kompose.service: eureka-server
    spec:
      containers:
      - env:
        - name: SPRING_PROFILES_ACTIVE
          value: docker
        image: eureka-server
        imagePullPolicy: IfNotPresent
        name: eureka-server
        ports:
        - containerPort: 8070
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
