docker/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.21.0 (992df58d8)
    kompose.volume.type: configMap
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.service.type: LoadBalancer
        kompose.version: 1.21.0 (992df58d8)
        kompose.volume.type: configMap
      creationTimestamp: null
      labels:
        io.kompose.network/clinic-net: "true"
        io.kompose.service: keycloak
    spec:
      containers:
      - args:
        - start-dev
        - --import-realm
        image: quay.io/keycloak/keycloak:24.0
        imagePullPolicy: ""
        name: keycloak
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /opt/keycloak/data/import/realm.json
          name: keycloak-claim0
          readOnly: true
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: keycloak-claim0
        persistentVolumeClaim:
          claimName: keycloak-claim0
          readOnly: true
status: {}
