docker/logstash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.service.type: ClusterIP
    kompose.version: 1.21.0 (992df58d8)
    kompose.volume.type: configMap
  creationTimestamp: null
  labels:
    io.kompose.service: logstash
  name: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: logstash
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.service.type: ClusterIP
        kompose.version: 1.21.0 (992df58d8)
        kompose.volume.type: configMap
      creationTimestamp: null
      labels:
        io.kompose.network/clinic-net: "true"
        io.kompose.service: logstash
    spec:
      containers:
      - args:
        - logstash
        - -f
        - /etc/logstash/conf.d/logstash.conf
        image: docker.elastic.co/logstash/logstash:7.7.0
        imagePullPolicy: ""
        name: logstash
        ports:
        - containerPort: 5000
        resources: {}
        volumeMounts:
        - mountPath: /etc/logstash/conf.d
          name: logstash-claim0
          readOnly: true
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: logstash-claim0
        persistentVolumeClaim:
          claimName: logstash-claim0
          readOnly: true
status: {}
