docker/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.service.type: ClusterIP
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.service.type: ClusterIP
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/clinic-net: "true"
        io.kompose.service: postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: clinicdb
        - name: POSTGRES_PASSWORD
          value: pass
        - name: POSTGRES_USER
          value: user
        image: postgres:16
        imagePullPolicy: ""
        name: clinic-postgres
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: pgdata
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: pgdata
status: {}
