docker/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.21.0 (992df58d8)
    kompose.volume.type: configMap
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prometheus
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.service.type: LoadBalancer
        kompose.version: 1.21.0 (992df58d8)
        kompose.volume.type: configMap
      creationTimestamp: null
      labels:
        io.kompose.network/clinic-net: "true"
        io.kompose.service: prometheus
    spec:
      containers:
      - image: prom/prometheus:latest
        imagePullPolicy: ""
        name: prometheus
        ports:
        - containerPort: 9090
        resources: {}
        volumeMounts:
        - mountPath: /etc/prometheus/prometheus.yml
          name: prometheus-claim0
          readOnly: true
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: prometheus-claim0
        persistentVolumeClaim:
          claimName: prometheus-claim0
          readOnly: true
status: {}
