docker/zipkin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.service.type: ClusterIP
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: zipkin
  name: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zipkin
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.service.type: ClusterIP
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/clinic-net: "true"
        io.kompose.service: zipkin
    spec:
      containers:
      - env:
        - name: ES_HOSTS
          value: http://elasticsearch:9300
        - name: STORAGE_TYPE
          value: elasticsearch
        image: openzipkin/zipkin
        imagePullPolicy: ""
        name: zipkin
        ports:
        - containerPort: 9411
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
