docker/eureka-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.image-pull-policy: IfNotPresent
    kompose.service.type: ClusterIP
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: eureka-server
  name: eureka-server
spec:
  ports:
  - name: "8070"
    port: 8070
    targetPort: 8070
  selector:
    io.kompose.service: eureka-server
  type: ClusterIP
status:
  loadBalancer: {}
