docker/gateway-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.image-pull-policy: IfNotPresent
    kompose.service.type: LoadBalancer
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway-server
  name: gateway-server
spec:
  ports:
  - name: "8071"
    port: 8071
    targetPort: 8071
  selector:
    io.kompose.service: gateway-server
  type: LoadBalancer
status:
  loadBalancer: {}
