docker/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kibana
  name: kibana
spec:
  ports:
  - name: "5601"
    port: 5601
    targetPort: 5601
  selector:
    io.kompose.service: kibana
  type: LoadBalancer
status:
  loadBalancer: {}
