docker/patient-provider-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.image-pull-policy: IfNotPresent
    kompose.service.type: ClusterIP
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: patient-provider-management
  name: patient-provider-management
spec:
  ports:
  - name: "8083"
    port: 8083
    targetPort: 8083
  selector:
    io.kompose.service: patient-provider-management
  type: ClusterIP
status:
  loadBalancer: {}
