docker/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.21.0 (992df58d8)
    kompose.volume.type: configMap
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  ports:
  - name: "9090"
    port: 9090
    targetPort: 9090
  selector:
    io.kompose.service: prometheus
  type: LoadBalancer
status:
  loadBalancer: {}
