docker/test-sample-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.image-pull-policy: IfNotPresent
    kompose.service.type: ClusterIP
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: test-sample-management
  name: test-sample-management
spec:
  ports:
  - name: "8082"
    port: 8082
    targetPort: 8082
  selector:
    io.kompose.service: test-sample-management
  type: ClusterIP
status:
  loadBalancer: {}
