docker/zipkin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.service.type: ClusterIP
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: zipkin
  name: zipkin
spec:
  ports:
  - name: "9411"
    port: 9411
    targetPort: 9411
  selector:
    io.kompose.service: zipkin
  type: ClusterIP
status:
  loadBalancer: {}
